--- a/NavARWebApp/build.xml
+++ b/NavARWebApp/build.xml
@@ -68,4 +68,7 @@
     nbproject/build-impl.xml file. 
 
     -->
+	<target name="jenkins-glassfish-deploy-updated" depends="clean, default, test"
+    	description="Clean, build, test and deploy application to GlassFish">	
+	</target>
 </project>
