--- a/NavARWebApp/build.xml
+++ b/NavARWebApp/build.xml
@@ -9,7 +9,7 @@
 <!-- in the project's Project Properties dialog box.-->
 <project name="NavARWebApp" default="default" basedir=".">
     <description>Builds, tests, and runs the project NavARWebApp.</description>
-    <!--import file="nbproject/build-impl.xml"/-->
+    <import file="nbproject/build-impl.xml"/>
     <!--
 
     There exist several targets which are by default empty and which can be 
@@ -68,7 +68,5 @@
     nbproject/build-impl.xml file. 
 
     -->
-	<target name="jenkins-glassfish-deploy-updated" depends="clean, default, test"
-    	description="Clean, build, test and deploy application to GlassFish">	
-	</target>
+
 </project>
