--- a/NavARWebApp/nbproject/private/private.properties
+++ b/NavARWebApp/nbproject/private/private.properties
@@ -1,7 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\School\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv3-612083979.properties
+deploy.ant.properties.file=C:\\Users\\Elize.TOSHIBA-Z\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv3-612083979.properties
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/School/GlassFish_Server/glassfish/domains/domain1
 j2ee.server.home=C:/Users/School/GlassFish_Server/glassfish
 j2ee.server.instance=[C:\\Users\\School\\GlassFish_Server\\glassfish;C:\\Users\\School\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=C:/Users/School/GlassFish_Server
-user.properties.file=C:\\Users\\School\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+javac.debug=true
+javadoc.preview=true
+selected.browser=SL[/Browsers/FirefoxBrowser
+user.properties.file=C:\\Users\\Elize.TOSHIBA-Z\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
