--- a/NavARWebApp/nbproject/project.properties
+++ b/NavARWebApp/nbproject/project.properties
@@ -29,6 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.json-simple-1.1.1.jar=C:\\Users\\Elize.TOSHIBA-Z\\Downloads\\json-simple-1.1.1.jar
+file.reference.json-simple-1.1.1.jar-1=web\\WEB-INF\\lib\\json-simple-1.1.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,7 +44,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${file.reference.json-simple-1.1.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
