--- a/NavARWebApp/nbproject/project.properties
+++ b/NavARWebApp/nbproject/project.properties
@@ -3,6 +3,14 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
+auxiliary.org-netbeans-modules-whitelist.whitelist-oracle=false
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -28,7 +36,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.json-simple-1.1.1.jar=C:\\Users\\Elize.TOSHIBA-Z\\Downloads\\json-simple-1.1.1.jar
 file.reference.json-simple-1.1.1.jar-1=web\\WEB-INF\\lib\\json-simple-1.1.1.jar
 includes=**
 j2ee.compile.on.save=true
@@ -85,8 +92,7 @@ source.encoding=UTF-8
 source.root=src
 src.dir=${source.root}/java
 test.src.dir=test
-war.content.additional=\
-    ${file.reference.json-simple-1.1.1.jar}
+war.content.additional=
 war.ear.name=${war.name}
 war.name=NavARWebApp.war
 web.docbase.dir=web
