--- a/NavARWebApp/nbproject/project.properties
+++ b/NavARWebApp/nbproject/project.properties
@@ -36,6 +36,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.javax.ws.rs.jar.zip=web\\WEB-INF\\lib\\javax.ws.rs.jar.zip
 file.reference.json-simple-1.1.1.jar-1=web\\WEB-INF\\lib\\json-simple-1.1.1.jar
 includes=**
 j2ee.compile.on.save=true
@@ -51,7 +52,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-simple-1.1.1.jar-1}
+    ${file.reference.json-simple-1.1.1.jar-1}:\
+    ${file.reference.javax.ws.rs.jar.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
