--- a/NavARWebApp/nbproject/project.properties
+++ b/NavARWebApp/nbproject/project.properties
@@ -36,7 +36,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.javax.ws.rs.jar=web\\WEB-INF\\lib\\javax.ws.rs.jar
+file.reference.javax.ws.rs-api-2.0.jar=web\\WEB-INF\\lib\\javax.ws.rs-api-2.0.jar
 file.reference.json-simple-1.1.1.jar-1=web\\WEB-INF\\lib\\json-simple-1.1.1.jar
 includes=**
 j2ee.compile.on.save=true
@@ -53,7 +53,7 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.json-simple-1.1.1.jar-1}:\
-    ${file.reference.javax.ws.rs.jar}
+    ${file.reference.javax.ws.rs-api-2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
