--- a/NavARWebApp/nbproject/project.properties
+++ b/NavARWebApp/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -36,8 +37,12 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.eclipselink.jar=web\\WEB-INF\\lib\\eclipselink.jar
+file.reference.javax.persistence_2.1.0.v201304241213.jar=web\\WEB-INF\\lib\\javax.persistence_2.1.0.v201304241213.jar
 file.reference.javax.ws.rs-api-2.0.jar=web\\WEB-INF\\lib\\javax.ws.rs-api-2.0.jar
 file.reference.json-simple-1.1.1.jar-1=web\\WEB-INF\\lib\\json-simple-1.1.1.jar
+file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar=web\\WEB-INF\\lib\\org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar
+file.reference.org.eclipse.persistence.jpa.modelgen_2.5.2.v20140319-9ad6abd.jar=web\\WEB-INF\\lib\\org.eclipse.persistence.jpa.modelgen_2.5.2.v20140319-9ad6abd.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -53,13 +58,19 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.json-simple-1.1.1.jar-1}:\
-    ${file.reference.javax.ws.rs-api-2.0.jar}
+    ${file.reference.javax.ws.rs-api-2.0.jar}:\
+    ${file.reference.eclipselink.jar}:\
+    ${file.reference.javax.persistence_2.1.0.v201304241213.jar}:\
+    ${file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar}:\
+    ${file.reference.org.eclipse.persistence.jpa.modelgen_2.5.2.v20140319-9ad6abd.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.eclipselink.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
