--- a/NavARWebApp/nbproject/project.properties
+++ b/NavARWebApp/nbproject/project.properties
@@ -37,12 +37,13 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.eclipselink.jar=web\\WEB-INF\\lib\\eclipselink.jar
-file.reference.javax.persistence_2.1.0.v201304241213.jar=web\\WEB-INF\\lib\\javax.persistence_2.1.0.v201304241213.jar
-file.reference.javax.ws.rs-api-2.0.jar=web\\WEB-INF\\lib\\javax.ws.rs-api-2.0.jar
-file.reference.json-simple-1.1.1.jar-1=web\\WEB-INF\\lib\\json-simple-1.1.1.jar
-file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar=web\\WEB-INF\\lib\\org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar
-file.reference.org.eclipse.persistence.jpa.modelgen_2.5.2.v20140319-9ad6abd.jar=web\\WEB-INF\\lib\\org.eclipse.persistence.jpa.modelgen_2.5.2.v20140319-9ad6abd.jar
+file.reference.eclipselink.jar=web/WEB-INF/lib/eclipselink.jar
+file.reference.javax.persistence-3.0-prelude-embedded-m2-sources.jar=web/WEB-INF/lib/javax.persistence-3.0-prelude-embedded-m2-sources.jar
+file.reference.javax.persistence_2.1.0.v201304241213.jar=web/WEB-INF/lib/javax.persistence_2.1.0.v201304241213.jar
+file.reference.javax.ws.rs-api-2.0.jar=web/WEB-INF/lib/javax.ws.rs-api-2.0.jar
+file.reference.json-simple-1.1.1.jar=web/WEB-INF/lib/json-simple-1.1.1.jar
+file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar=web/WEB-INF/lib/org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar
+file.reference.org.eclipse.persistence.jpa.modelgen_2.5.2.v20140319-9ad6abd.jar=web/WEB-INF/lib/org.eclipse.persistence.jpa.modelgen_2.5.2.v20140319-9ad6abd.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -57,10 +58,11 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-simple-1.1.1.jar-1}:\
-    ${file.reference.javax.ws.rs-api-2.0.jar}:\
     ${file.reference.eclipselink.jar}:\
+    ${file.reference.javax.persistence-3.0-prelude-embedded-m2-sources.jar}:\
     ${file.reference.javax.persistence_2.1.0.v201304241213.jar}:\
+    ${file.reference.javax.ws.rs-api-2.0.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar}:\
     ${file.reference.org.eclipse.persistence.jpa.modelgen_2.5.2.v20140319-9ad6abd.jar}
 # Space-separated list of extra javac options
