--- a/NavARWebApp/nbproject/project.properties
+++ b/NavARWebApp/nbproject/project.properties
@@ -40,6 +40,7 @@ excludes=
 file.reference.eclipselink.jar=web/WEB-INF/lib/eclipselink.jar
 file.reference.javax.persistence-3.0-prelude-embedded-m2-sources.jar=web/WEB-INF/lib/javax.persistence-3.0-prelude-embedded-m2-sources.jar
 file.reference.javax.persistence_2.1.0.v201304241213.jar=web/WEB-INF/lib/javax.persistence_2.1.0.v201304241213.jar
+file.reference.javax.validation-1.0.0.GA.jar=web/WEB-INF/lib/javax.validation-1.0.0.GA.jar
 file.reference.javax.ws.rs-api-2.0.jar=web/WEB-INF/lib/javax.ws.rs-api-2.0.jar
 file.reference.json-simple-1.1.1.jar=web/WEB-INF/lib/json-simple-1.1.1.jar
 file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar=web/WEB-INF/lib/org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar
@@ -64,7 +65,8 @@ javac.classpath=\
     ${file.reference.javax.ws.rs-api-2.0.jar}:\
     ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar}:\
-    ${file.reference.org.eclipse.persistence.jpa.modelgen_2.5.2.v20140319-9ad6abd.jar}
+    ${file.reference.org.eclipse.persistence.jpa.modelgen_2.5.2.v20140319-9ad6abd.jar}:\
+    ${file.reference.javax.validation-1.0.0.GA.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
