--- a/NavARWebApp/nbproject/project.properties
+++ b/NavARWebApp/nbproject/project.properties
@@ -66,7 +66,8 @@ javac.classpath=\
     ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar}:\
     ${file.reference.org.eclipse.persistence.jpa.modelgen_2.5.2.v20140319-9ad6abd.jar}:\
-    ${file.reference.javax.validation-1.0.0.GA.jar}
+    ${file.reference.javax.validation-1.0.0.GA.jar}:\
+    ${libs.hibernate4-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -74,7 +75,8 @@ javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}:\
     ${libs.eclipselink.classpath}:\
-    ${libs.eclipselinkmodelgen.classpath}
+    ${libs.eclipselinkmodelgen.classpath}:\
+    ${libs.hibernate4-persistencemodelgen.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
