--- a/NavARWebApp/nbproject/project.properties
+++ b/NavARWebApp/nbproject/project.properties
@@ -38,6 +38,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.eclipselink.jar=web/WEB-INF/lib/eclipselink.jar
+file.reference.javax.mail-1.3.3.01.jar=web/WEB-INF/lib/javax.mail-1.3.3.01.jar
 file.reference.javax.persistence-3.0-prelude-embedded-m2-sources.jar=web/WEB-INF/lib/javax.persistence-3.0-prelude-embedded-m2-sources.jar
 file.reference.javax.persistence_2.1.0.v201304241213.jar=web/WEB-INF/lib/javax.persistence_2.1.0.v201304241213.jar
 file.reference.javax.validation-1.0.0.GA.jar=web/WEB-INF/lib/javax.validation-1.0.0.GA.jar
@@ -65,6 +66,7 @@ javac.classpath=\
     ${file.reference.javax.ws.rs-api-2.0.jar}:\
     ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar}:\
+    ${file.reference.javax.mail-1.3.3.01.jar}:\
     ${file.reference.org.eclipse.persistence.jpa.modelgen_2.5.2.v20140319-9ad6abd.jar}:\
     ${file.reference.javax.validation-1.0.0.GA.jar}:\
     ${libs.hibernate4-persistence.classpath}
