--- a/NavARWebApp/nbproject/project.properties
+++ b/NavARWebApp/nbproject/project.properties
@@ -44,6 +44,7 @@ file.reference.javax.persistence_2.1.0.v201304241213.jar=web/WEB-INF/lib/javax.p
 file.reference.javax.validation-1.0.0.GA.jar=web/WEB-INF/lib/javax.validation-1.0.0.GA.jar
 file.reference.javax.ws.rs-api-2.0.jar=web/WEB-INF/lib/javax.ws.rs-api-2.0.jar
 file.reference.json-simple-1.1.1.jar=web/WEB-INF/lib/json-simple-1.1.1.jar
+file.reference.mysql-connector-java-5.1.39-bin.jar=web/WEB-INF/lib/mysql-connector-java-5.1.39-bin.jar
 file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar=web/WEB-INF/lib/org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar
 file.reference.org.eclipse.persistence.jpa.modelgen_2.5.2.v20140319-9ad6abd.jar=web/WEB-INF/lib/org.eclipse.persistence.jpa.modelgen_2.5.2.v20140319-9ad6abd.jar
 includes=**
@@ -61,15 +62,15 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.eclipselink.jar}:\
+    ${file.reference.javax.mail-1.3.3.01.jar}:\
     ${file.reference.javax.persistence-3.0-prelude-embedded-m2-sources.jar}:\
     ${file.reference.javax.persistence_2.1.0.v201304241213.jar}:\
+    ${file.reference.javax.validation-1.0.0.GA.jar}:\
     ${file.reference.javax.ws.rs-api-2.0.jar}:\
     ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.mysql-connector-java-5.1.39-bin.jar}:\
     ${file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar}:\
-    ${file.reference.javax.mail-1.3.3.01.jar}:\
-    ${file.reference.org.eclipse.persistence.jpa.modelgen_2.5.2.v20140319-9ad6abd.jar}:\
-    ${file.reference.javax.validation-1.0.0.GA.jar}:\
-    ${libs.hibernate4-persistence.classpath}
+    ${file.reference.org.eclipse.persistence.jpa.modelgen_2.5.2.v20140319-9ad6abd.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
