--- a/NavARWebApp/web/WEB-INF/web.xml
+++ b/NavARWebApp/web/WEB-INF/web.xml
@@ -8,9 +8,9 @@
     <security-constraint>
         <display-name>Constraint1</display-name>
         <web-resource-collection>
-            <web-resource-name>resourceName</web-resource-name>
+            <web-resource-name>allHTTP methods</web-resource-name>
             <description/>
-            <url-pattern>*</url-pattern>
+            <url-pattern>NavARWebApp/NavARWebService</url-pattern>
         </web-resource-collection>
     </security-constraint>
 </web-app>
