web xml aangepast

--- a/NavARWebApp/web/WEB-INF/web.xml
+++ b/NavARWebApp/web/WEB-INF/web.xml
@@ -10,7 +10,7 @@
         <web-resource-collection>
             <web-resource-name>allHTTP methods</web-resource-name>
             <description/>
-            <url-pattern>NavARWebApp/NavARWebService</url-pattern>
+            <url-pattern>/NavARWebApp/NavARWebService/*</url-pattern>
         </web-resource-collection>
     </security-constraint>
 </web-app>
