--- a/NavARWebApp/web/WEB-INF/web.xml
+++ b/NavARWebApp/web/WEB-INF/web.xml
@@ -11,6 +11,10 @@
             <web-resource-name>allHTTP methods</web-resource-name>
             <description/>
             <url-pattern>/NavARWebApp/NavARWebService/*</url-pattern>
+            <http-method>GET</http-method>
+            <http-method>PUT</http-method>
+            <http-method>POST</http-method>
+            <http-method>DELETE</http-method>
         </web-resource-collection>
     </security-constraint>
 </web-app>
